--- a/Tevyat Expanding Cards/style.css
+++ b/Tevyat Expanding Cards/style.css
@@ -19,6 +19,10 @@ body {
     margin: 0;
 }
 
+body p{
+    text-align: center;
+}
+
 .container{
     display: flex;
     width: 90vw;
@@ -36,6 +40,21 @@ body {
     margin: 10px;
     position: relative;
     transition: flex 0.7s ease-in;
+}
+
+.icon{
+    top: 10%;
+    display: flex;
+    align-items: center;
+    position: relative;
+    flex: 0.5;
+    border-radius: 50px;
+    
+}
+
+.icon img{
+    max-width: 30%;
+    height: auto;
 }
 
 .panel h3{
